css/responsive.css
#menu ul li.toc-categories {
  display:none;
}

#menu ul li.menu-break {
  display:none;
}
.mobile-break {
  display: none;
}

/*@media (max-width: 768px) {
  #menu ul li{
    display: block;
  }
  #menu ul li.expand-menu {
    display: none;
  }
}
*/
@media (min-width: 1025px) {
  #menu ul li.expand-menu {
    display: none;
  }

}

@media (max-width: 1024px) {
  table.intro {
    width: 940px;
  }
  .mw {
    min-width: 0px;
  }
  .breadcrumbs li:first-of-type {
    margin-left: 8px;
  }
  #menu ul li.logo {
    padding-left: 30px;
  }
   #menu ul li.expand-menu {
    display: none;
  }

  #menu ul li, #menu ul li.d{
    display: none;
  }
  .home_txt p {
    width: auto;
  }
  .int_title {
    text-align: left;
    width: auto;
    margin: 80px 20px 0px 20px;
  }
  .int_title:after {
    left: 0px;
  }
  .int_text {
    width: auto;
    margin: 20px 10px 100px 20px;
  }
  #menu ul li.force-expand, #menu ul li.d.force-expand {
    display:inline-block;
  }

  #menu ul li.force-expand.toc-categories {
    display: none;
  }
  #menu ul li.force-expand ul li{
    display:block;
  }
  #menu ul li.force-expand.nav, #menu ul li.force-expand#twitter-menu-item {
    clear:both;
    margin: 0 auto;
  }
  #menu ul li.logo {
    display: block;
  }
  #menu ul li.expand-menu {
    display: inline-block;
    float: right;
  }
  #menu ul br.menu-break {
    display: block;
  }
  #menu ul li.expand-menu, #menu ul li.expand-menu a {
    height: 50px;
    width: 110px;
  }
  #menu ul li.expand-menu span.expand-icon{
    font-size: 24px;
  }
  #menu ul li.expand-menu span.menu-text{
    margin-right:7px;
    position: relative;
    bottom: 3px;
  }
  #menu ul li.pull-right {
    float: right;
    margin-right: 10px;
  }

}
@media (max-width: 768px) {
  #menu ul li.force-expand.nav {
    clear:both;
    margin: 0 auto;
  }
  #menu ul li.force-expand.search-bar {
    clear:both;
  }

  /* Responsive Homepage 768 max width */
  div.headlines.tc {
    margin-left: 35px;
  }
  br.mobile-break {
    display: block;
  }
  table.intro {
    width: 768px;
  }
}

@media (max-width: 570px) {

  /* Responsive Layout 570 max width */


  /* Responsive Menu 570 max width */

  #menu ul li.force-expand.nav, #menu ul li.force-expand#twitter-menu-item {
    clear: both;
    width: 100%;
    margin: auto;
  }
  #menu ul li.force-expand {
    display:block;
  }
  #menu ul li.clear-float{
    clear:both;
    width: 0px;
    display:block;
  }
  #menu ul li.search-bar {
    margin: 0 11px 0 20px;
    float: right;
  }
  #menu ul li.d
  {
    margin: 10px;
    clear: both;
    float: right;
  }

  /* Responsive Homepage 570 max width */
  #header .scroller .item .tc h1{
    font-size: 40px;
  }
  #header .scroller .item .tc h2 {
    font-size: 24px;
    line-height: 32px;
  }
  #header .scroller .item div.headlines.tc {
    margin-left: 30px;
  }
  div.headlines a.download-headline {
    font-size: .7em;
  }
  #header .scroller .item div.headlines .btn { font-size: 16px; }

  div.alertbar .hor-bar:after {
    content: "";
  }
  div.alertbar {
    text-align: left;
    padding-left: 25px;
  }
  div.alertbar a {
    display:block;
  }
  div.alertbar span.strong {
    display: block;
  }
  table.intro {
    width: 100%;
    background: none;
  }
  table.intro td {
    display: block;
    padding: 25px 0 5px 0;
  }
  table.intro td h1 {
    font-size: 24px;
    text-align: left;
    padding-left: 70px;
  }
  table.intro td.ag, table.intro td.fl, table.intro td.fam {
    background-position: 30px 23%;
  }
  table.intro p {
    font-size: 16px;
    line-height: 24px;
    padding: 2px 25px 15px 30px;
    text-align: left;
  }
  table.intro span {
    position: relative;
    bottom: 10px;
    padding-left: 30px;
    text-align: left;
  }

  .home_txt p {
    margin: 20px 10px 20px 10px;
  }
  .home_txt h1 {
    font-size: 32px;
    margin: 20px 10px 20px 10px;
  }

  .home_txt h2 {
    font-size: 20px;
    margin: 20px 10px 20px 10px;

  }

}

